I am leaving this branch as a flaming pile of debris with plenty of potential. I have all of the .faux-stickys. in intro 5 working, but getting progressively harder to calibrate. It seems like after starting this stuck22 idea, the top of the page no longer cooresponds to a 0 offset in waypoints. I'm moving back to what is ccurrently gh-pages to try it without the stuck22 strategy

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .quoteBankVertical{
-    background-color: dodgerblue;
-    position: fixed;
+/*    background-color: dodgerblue;
+*/    position: fixed;
     top: 19vh;
     width: 50vw;
     margin: 0 auto;
@@ -8,7 +8,7 @@
 }
 
 .quoteVertical{
-    background-color: goldenrod;
+    /*background-color: goldenrod;*/
     font-family: lato;
     width: 35vw;
     margin: 0 auto;
@@ -141,6 +141,12 @@ p {
     padding: 0px 6%;
 }
 
+.headshotReaction2{
+    max-width: 28%;
+    width: 100%;
+    padding: 0px 2%;
+}
+
 .bg{
     width: 31%;
     opacity: .17;
@@ -170,7 +176,11 @@ p {
 }
 
 .right{
-        margin: 0% 0% 0% 50%;
+     margin: 0% 0% 0% 50%;
+}
+
+.left{
+    margin: 0% 50% 0% 2.5%;
 }
 
 .sectionheader{
